add_library(E16ANA_RundependentName
  src/E16ANA_RundependentName.cc
)

##_________________________________________________
#add_executable(rundependentNameTest
#  examples/rundependentNameTest.cc
#)
#
#target_link_libraries(rundependentNameTest
#  E16ANA_CalibDB
#  E16ANA_ErrorMessage
#  E16ANA_GeometryV2
#  E16ANA_MagneticFieldMap
#  E16ANA_RundependentName
##  libG4clhep.so
#)
